Added signals to abstract player inputs and a basic context manager

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,18 @@
 [package]
-name = "ninjadungeon"
+name = "NinjaDungeon"
 version = "0.1.0"
 edition = "2021"
+default-run = "NinjaDungeon"
+
+[[bin]]
+name = "Editor"
+path = "src/Editor.rs"
+required-features = ["editor"]
 
 [dependencies.sdl2]
 version = "^0.35.2"
-default-feature = false
-feature = ["image", "mixer"]
+default-features = false
+features = ["image", "mixer"]
 
 [dependencies.BinaryFileIO]
 path = "../BinaryFileIO/"
