Added map loading to the main file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "NinjaDungeon"
 version = "0.1.0"
 edition = "2021"
-default-run = "Editor"
+default-run = "NinjaDungeon"
 
 [[bin]]
 name = "Editor"
