Added SharpBlock collision into editor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,6 @@ features = ["image", "mixer", "ttf"]
 [dependencies.BinaryFileIO]
 path = "../BinaryFileIO/"
 
-[dependencies.rlua]
-version = "^0.19.1"
+#[dependencies.rlua]
+#version = "^0.19.1"
 
