Fixed map loading issues by switching to serde and fixed compilation issues with events

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,13 @@ version = "^0.35.2"
 default-features = false
 features = ["image", "mixer", "ttf"]
 
-[dependencies.BinaryFileIO]
-path = "../BinaryFileIO/"
+[dependencies.serde]
+version = "^1.0.163"
+features = ["derive"]
 
-[dependencies.rlua]
-version = "^0.19.1"
+[dependencies.serde_json]
+version = "^1.0"
+
+#[dependencies.rlua]
+#version = "^0.19.1"
 
